Cambio de formato de tiendas en TAREA_FASE_ACCION_VENTA_INTEGRA